--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,11 @@ version: "3.9"
 
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: skillmate-backend
-    ports:
-      - "5000:5000"
-    volumes:
-      - .:/app  # Optional: live code editing (disable in prod)
+    depends_on:
+      - mongo
+      - qdrant
     environment:
       MODEL_PROVIDER: ${MODEL_PROVIDER}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
@@ -18,30 +15,28 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       QDRANT_HOST: ${QDRANT_HOST}
       QDRANT_PORT: ${QDRANT_PORT}
-    depends_on:
-      - mongo
-      - qdrant
+    ports:
+      - "5000:5000"
+    volumes:
+      - .:/app
     restart: unless-stopped
 
   mongo:
     image: mongo:6.0
     container_name: skillmate-mongo
-    restart: unless-stopped
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - mongo_data:/data/db
 
   qdrant:
     image: qdrant/qdrant:latest
     container_name: skillmate-qdrant
-    restart: unless-stopped
     ports:
       - "6333:6333"
     volumes:
-      - qdrant-data:/qdrant/storage
+      - qdrant_data:/qdrant/storage
 
 volumes:
-  mongo-data:
-  qdrant-data:
-
+  mongo_data:
+  qdrant_data:
